# abb-icp

./: 1-data_prep.ipynb  2-feature_engineering.ipynb  3-icp_analysis.ipynb  4-predictor_analysis.ipynb  5-create_icp.ipynb  README.md  pyproject.toml  requirements.txt
data/1-raw/: note.txt
data/2-clean/: note.txt  students_activity_reviews.csv
data/3-results/: LR_results.csv
data/4-icp/: 5-star-customers.md  icp.md  join_reason_cluster_analysis.md
prompts/: company_classifier.txt  job_classifier.txt  response_summarizer.txt
utils/: __init__.py  data_eng.py  data_utils.py  feature_eng.py  openai_classification.py  openai_summarization.py  openai_utils.py
